--- a/templates/list.html
+++ b/templates/list.html
@@ -1,4 +1,5 @@
 ﻿{% for item in data %}
 <input type="button" value={{ item }}><br />
 <p> {{ item }} </p><br />
+<a href="/{{ item }}">{{ item }}</a>
 {% endfor %}
