--- a/templates/list.html
+++ b/templates/list.html
@@ -1,5 +1,5 @@
 ﻿{% for item in data %}
 <input type="button" value={{ item }}><br />
 <p> {{ item }} </p><br />
-<a href="/{{ item }}">{{ item }}</a>
+<a href="/static/{{ item }}">{{ item }}</a>
 {% endfor %}
